--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         
         <div class="data">
           <div id="ourmanna-verse">Loading...</div>
-          <script src="http://www.ourmanna.com/verses/api/js/" type="text/javascript"></script>
+          <script src="https://www.ourmanna.com/verses/api/js/" type="text/javascript"></script>
         </div>
     
       </div>
