Implemented News feature

--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
 
     <div class="float-child">
       <div class="Buzzfeed">
-        <div class="page-header"><img src="./assets/icons8-calendar.gif" height="100" width="100" align="left"/><h2>Buzzfeed</h2></div>
-        <div class="data">
-          
-        </div>
+        <div class="page-header"><h2>
+          <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+          News<small> via Buzzfeed</small></h2></div>
+        <ul class="media-list">
+     
+        </ul>
       </div>
     </div>
 
