--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="The Kate Dashboard">
   <meta name="author" content="Glen Joy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
   <script src="scripts.js"></script>
@@ -123,8 +125,8 @@
 
   </div>
 
-  
-  
+
+
 </body>
 
 </html>
