Turned form autocomplete off, did CSS magic

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <div class="title">
       <h1>The Dashboard</h1>
       <p>All the information you need to start your day!</p>
+
       <div class="title-date">
 
       </div>
+
       <div class="btn-group" role="group" aria-label="...">
         <button onclick="blackboard()" type="button" class="btn btn-default">Blackboard
           <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
@@ -38,12 +40,14 @@
           <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
         </button>
       </div>
+
     </div>
+    
   </div>
 
 
 
-      <form action="javascript:search();"  class="search-bar">
+      <form autocomplete="off" action="javascript:search();"  class="search-bar">
         <div class="google">
           <img src="assets/google-logo.png" width="45" height="45">
         </div>
