Search bar and positioning changes

--- a/index.html
+++ b/index.html
@@ -39,23 +39,18 @@
         <button onclick="drive()" type="button" class="btn btn-default">Drive
           <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
         </button>
+      </div></div></div><div class="formArea">
+    <form autocomplete="off" action="javascript:search();"  class="search-bar">
+      <div class="google">
+        <img src="assets/google-logo.png" width="45" height="45">
       </div>
-
-    </div>
-    
+      <input type="search" name="search" id="input-search" pattern=".*\S.*" required>
+      <button class="search-btn" type="submit">
+        <span>Search</span>
+      </button>
+    </form>
   </div>
-
-
-
-      <form autocomplete="off" action="javascript:search();"  class="search-bar">
-        <div class="google">
-          <img src="assets/google-logo.png" width="45" height="45">
-        </div>
-        <input type="search" name="search" id="input-search" pattern=".*\S.*" required>
-        <button class="search-btn" type="submit">
-          <span>Search</span>
-        </button>
-      </form>
+      
 
 
   <div class="float-container">
